<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ipAddress">Indirizzo ip server</string>
    <string name="app_name">RobotSample</string>
    <string name="port">Porta</string>
    <string name="connect_label">Connetti</string>
    <string name="connection_status">Nessuna connessione</string>
    <string name="disconnect_label">Disconnetti</string>
    <string name="Back">&lt; Previous</string>
    <string name="Next">  Next &gt;</string>
    <color name="frameColor">#342</color>
    <string name="label1">ip:</string>
    <string name="label2">ip:</string>
    <string name="numpage">Page 1 of 1</string>
    <string name="desc1">Base del joypad</string>
    <string name="desc2">Knob del joypad</string>
    <string name="desc3">Icona simbolo della webcam</string>
    <string name="wait">Ricerca robot&#8230;</string>
    <string name="refresh">refresh</string>

</resources>