<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/ipAddress" />

	<EditText
	    android:id="@+id/edit_ipAddress"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:text="192.168.0.55" />
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/port" />

	<EditText
	    android:id="@+id/edit_port"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:inputType="numberDecimal"
	    android:text="80" />
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
	<Button
            android:id="@+id/connect_button"
            android:layout_height="wrap_content"
            android:text="@string/connect_label"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="90dip"
            android:layout_width="130dip"
            />
	<Button
            android:id="@+id/disconnect_button"
            android:layout_height="wrap_content"
            android:text="@string/disconnect_label"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="90dip"
            android:layout_width="130dip"
            />
	</LinearLayout>
	
	<!-- <Button
            android:id="@+id/scan_button"
            android:layout_height="wrap_content"
            android:text="Scan"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="90dip"
            android:layout_width="130dip"
            />
	-->
	
	<TextView
	    android:id="@+id/connection_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:text="@string/connection_status" />

</LinearLayout>